--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <h1>Helen's Todo List</h1>
+        <h1>Helen's To-do List</h1>
     </header>
     <form>
         <input type="text" class="todo-input" />
